--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Marcel Beck <marcel.beck@mbeck.org>
 Build-Depends: debhelper (>= 7 )
 Standards-Version: 3.6.10
-Homepage: https://github.com/OMV-Plugins/openmediavault-website
+Homepage: http://omv-plugins.org/
 
 Package: openmediavault-website
 Architecture: all
